# ocr-v2

./: README.md  alembic.ini  main.py  pyproject.toml
app/common/: enum.py
app/core/: config.py
app/db/: database.py  test_db.py
app/docs/: models.py  repository.py  router.py  schemas.py  service.py
app/storage/: service.py
migrations/: env.py
migrations/versions/: 650a5f89cc88_create_initial_tables.py
