[project]
name = "ocr-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
